K8s/Istio/kwetter-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kwetter-ingress-gateway
  namespace: kwetter
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80 # 443
        name: http # https
        protocol: HTTP # HTTPS
      hosts:
        - "*"
      # tls:
      #   mode: SIMPLE
      #   credentialName: kwetter-ingress-gateway-tls-credentials
      # https://istio.io/latest/docs/tasks/traffic-management/ingress/secure-ingress/
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kwetter-ingress-gateway-virtual-service
  namespace: kwetter
spec:
  hosts:
  - "*"
  gateways:
  - kwetter-ingress-gateway
  http:
  - name: kwetter-frontend-service-latest-routes
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: kwetter-frontend-service
  - name: kwetter-user-service-latest-routes
    match:
    - uri:
        prefix: /api/User
    route:
    - destination:
        port:
          number: 80
        host: kwetter-user-service
    corsPolicy:
      allowOrigins:
      - exact: http://neuralm.net
      - exact: http://localhost:8080
      allowMethods:
      - POST
      - GET
      - OPTIONS
      allowHeaders:
      - Authorization
      - Content-Type
      maxAge: 24h
      allowCredentials: false
  - name: kwetter-authorization-service-latest-routes
    match:
    - uri:
        prefix: /api/Authorization
    route:
    - destination:
        port:
          number: 80
        host: kwetter-authorization-service
    corsPolicy:
      allowOrigins:
      - exact: http://neuralm.net
      - exact: http://localhost:8080
      allowMethods:
      - POST
      - OPTIONS
      allowHeaders:
      - Authorization
      - Content-Type
      maxAge: 24h
      allowCredentials: false
  - name: kwetter-kweet-service-latest-routes
    match:
    - uri:
        prefix: /api/Kweet
    route:
    - destination:
        port:
          number: 80
        host: kwetter-kweet-service
    corsPolicy:
      allowOrigins:
      - exact: http://neuralm.net
      - exact: http://localhost:8080
      allowMethods:
      - POST
      - DELETE
      - OPTIONS
      allowHeaders:
      - Authorization
      - Content-Type
      maxAge: 24h
      allowCredentials: false
  - name: kwetter-follow-service-latest-routes
    match:
    - uri:
        prefix: /api/Follow
    route:
    - destination:
        port:
          number: 80
        host: kwetter-follow-service
    corsPolicy:
      allowOrigins:
      - exact: http://neuralm.net
      - exact: http://localhost:8080
      allowMethods:
      - POST
      - DELETE
      - GET
      - OPTIONS
      allowHeaders:
      - Authorization
      - Content-Type
      maxAge: 24h
      allowCredentials: false
  - name: kwetter-timeline-service-latest-routes
    match:
    - uri:
        prefix: /api/Timeline
    route:
    - destination:
        port:
          number: 80
        host: kwetter-timeline-service
    corsPolicy:
      allowOrigins:
      - exact: http://neuralm.net
      - exact: http://localhost:8080
      allowMethods:
      - GET
      - OPTIONS
      allowHeaders:
      - Authorization
      - Content-Type
      maxAge: 24h
      allowCredentials: false
  - name: kwetter-notification-service-latest-routes
    match:
    - uri:
        prefix: /api/Notification
    route:
    - destination:
        port:
          number: 80
        host: kwetter-notification-service
    corsPolicy:
      allowOrigins:
      - exact: http://neuralm.net
      - exact: http://localhost:8080
      allowMethods:
      - GET
      - OPTIONS
      allowHeaders:
      - Authorization
      - Content-Type
      maxAge: 24h
      allowCredentials: false
